--- a/智慧田园/智慧田园/Expert/ExpertReplyTableViewCell.xib
+++ b/智慧田园/智慧田园/Expert/ExpertReplyTableViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="16A313a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A313a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,11 +14,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="141" id="KGk-i7-Jjw" customClass="ExpertReplyTableViewCell" customModule="智慧田园" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="716" height="178"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="547" id="KGk-i7-Jjw" customClass="ExpertReplyTableViewCell" customModule="智慧田园" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="840" height="584"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="716" height="177"/>
+                <frame key="frameInset" width="840" height="583"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P2w-7u-2zF">
@@ -51,6 +52,34 @@
                                     </mask>
                                 </variation>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="gLp-ia-3Ht">
+                                <subviews>
+                                    <imageView clipsSubviews="YES" tag="101" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qfs-WA-3LS" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="qfs-WA-3LS" secondAttribute="height" multiplier="1:1" id="Ryk-cB-cwz"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" tag="102" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9qV-4m-ydI" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="9qV-4m-ydI" secondAttribute="height" multiplier="1:1" id="qvF-Z7-7Go"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" tag="103" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZJc-5d-17E" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ZJc-5d-17E" secondAttribute="height" multiplier="1:1" id="Xkn-qn-A2b"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="4Zi-8x-Gfi"/>
+                                    <constraint firstAttribute="width" constant="300" id="afe-kl-XMC"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="afe-kl-XMC"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.40000000000000002" green="0.80000000000000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -63,8 +92,10 @@
                             <constraint firstAttribute="trailing" secondItem="KWd-a2-JyN" secondAttribute="trailing" constant="466" id="jOj-LM-Lfz"/>
                             <constraint firstAttribute="trailing" secondItem="2m7-6b-hta" secondAttribute="trailing" constant="10" id="o7f-lF-X7p"/>
                             <constraint firstItem="KWd-a2-JyN" firstAttribute="leading" secondItem="P2w-7u-2zF" secondAttribute="leading" constant="10" id="pKz-Jl-yEA"/>
-                            <constraint firstItem="2m7-6b-hta" firstAttribute="top" secondItem="ZAK-md-Z0u" secondAttribute="bottom" constant="15" id="qq3-9J-u3p"/>
+                            <constraint firstItem="gLp-ia-3Ht" firstAttribute="leading" secondItem="ZAK-md-Z0u" secondAttribute="leading" id="pof-dL-l7J"/>
+                            <constraint firstItem="2m7-6b-hta" firstAttribute="top" secondItem="ZAK-md-Z0u" secondAttribute="bottom" constant="95" id="qq3-9J-u3p"/>
                             <constraint firstItem="ZAK-md-Z0u" firstAttribute="leading" secondItem="KWd-a2-JyN" secondAttribute="trailing" constant="10" id="uIq-TG-ptt"/>
+                            <constraint firstAttribute="bottom" secondItem="gLp-ia-3Ht" secondAttribute="bottom" constant="15" id="uX8-Rv-XdI"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -93,11 +124,15 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="ButtonTime" destination="rlS-Kk-kfu" id="8nw-qO-6IV"/>
+                <outlet property="ConstraintBottom" destination="qq3-9J-u3p" id="jwt-db-Zfv"/>
                 <outlet property="ImageViewHead" destination="KWd-a2-JyN" id="0wH-Db-KQz"/>
                 <outlet property="LabelContent" destination="ZAK-md-Z0u" id="0Bm-re-RO3"/>
+                <outlet property="imageViewOne" destination="qfs-WA-3LS" id="Juu-nd-Fb9"/>
+                <outlet property="imageViewThd" destination="ZJc-5d-17E" id="0r9-Hc-AaE"/>
+                <outlet property="imageViewTwo" destination="9qV-4m-ydI" id="t5B-8u-ti0"/>
                 <outlet property="newContentView" destination="P2w-7u-2zF" id="SKB-tn-ldQ"/>
             </connections>
-            <point key="canvasLocation" x="410" y="44"/>
+            <point key="canvasLocation" x="-383" y="-331"/>
         </tableViewCell>
     </objects>
     <resources>
