--- a/智慧田园/智慧田园/Expert/MyReplyTableViewCell.xib
+++ b/智慧田园/智慧田园/Expert/MyReplyTableViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11198.2" systemVersion="16A313a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A313a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="343" id="KGk-i7-Jjw" customClass="MyReplyTableViewCell" customModule="智慧田园" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="343" id="KGk-i7-Jjw" customClass="MyReplyTableViewCell" customModule="智慧田园" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="568" height="343"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -52,16 +53,46 @@
                                     <constraint firstAttribute="width" constant="35" id="i7d-C3-aUR"/>
                                 </constraints>
                             </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="ohv-ad-Bhe">
+                                <subviews>
+                                    <imageView clipsSubviews="YES" tag="101" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="isJ-Bh-8e7" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="isJ-Bh-8e7" secondAttribute="height" multiplier="1:1" id="CpH-fA-GS9"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" tag="102" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ztz-DA-ABf" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ztz-DA-ABf" secondAttribute="height" multiplier="1:1" id="N0k-AH-aE0"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" tag="103" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DY0-TD-Ff5" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="DY0-TD-Ff5" secondAttribute="height" multiplier="1:1" id="e6N-Mg-t4h"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="fkG-ag-fVZ"/>
+                                    <constraint firstAttribute="width" constant="300" id="hpA-yg-gqZ"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="hpA-yg-gqZ"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ohv-ad-Bhe" secondAttribute="bottom" constant="15" id="406-9y-GaZ"/>
                             <constraint firstAttribute="trailing" secondItem="2P9-w8-oTs" secondAttribute="trailing" constant="10" id="8CD-yV-pdH"/>
                             <constraint firstAttribute="bottom" secondItem="2P9-w8-oTs" secondAttribute="bottom" constant="5" id="Gyd-XI-yB4"/>
                             <constraint firstItem="Dzr-uT-2cI" firstAttribute="leading" secondItem="Qj7-yF-kOt" secondAttribute="trailing" constant="-473" id="HSP-sA-TDo"/>
                             <constraint firstItem="Dzr-uT-2cI" firstAttribute="leading" secondItem="Qj7-yF-kOt" secondAttribute="trailing" constant="10" id="JHb-db-c3S"/>
-                            <constraint firstItem="2P9-w8-oTs" firstAttribute="top" secondItem="Qj7-yF-kOt" secondAttribute="bottom" constant="15" id="LIp-S0-Ch4"/>
+                            <constraint firstItem="2P9-w8-oTs" firstAttribute="top" secondItem="Qj7-yF-kOt" secondAttribute="bottom" constant="95" id="LIp-S0-Ch4"/>
                             <constraint firstAttribute="trailing" secondItem="Dzr-uT-2cI" secondAttribute="trailing" constant="466" id="NQQ-WK-Kle"/>
                             <constraint firstItem="Qj7-yF-kOt" firstAttribute="top" secondItem="pIr-rJ-kQD" secondAttribute="top" constant="10" id="RQ9-BE-1bl"/>
+                            <constraint firstItem="ohv-ad-Bhe" firstAttribute="leading" secondItem="Qj7-yF-kOt" secondAttribute="leading" id="eLU-FU-pSq"/>
                             <constraint firstAttribute="bottom" secondItem="2P9-w8-oTs" secondAttribute="bottom" id="gBr-46-jD5"/>
                             <constraint firstItem="Dzr-uT-2cI" firstAttribute="top" secondItem="pIr-rJ-kQD" secondAttribute="top" constant="5" id="hnG-Ty-dvA"/>
                             <constraint firstAttribute="trailing" secondItem="Qj7-yF-kOt" secondAttribute="trailing" constant="15" id="kvX-j5-X47"/>
@@ -70,10 +101,10 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="kvX-j5-X47"/>
+                                <exclude reference="Gyd-XI-yB4"/>
                                 <exclude reference="HSP-sA-TDo"/>
                                 <exclude reference="NQQ-WK-Kle"/>
-                                <exclude reference="Gyd-XI-yB4"/>
+                                <exclude reference="kvX-j5-X47"/>
                             </mask>
                         </variation>
                     </view>
@@ -96,8 +127,12 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="ButtonTime" destination="jlQ-gs-6ca" id="SAb-mc-V9b"/>
+                <outlet property="ConstraintBottom" destination="LIp-S0-Ch4" id="Jr5-IG-Wzn"/>
                 <outlet property="ImageViewHead" destination="Dzr-uT-2cI" id="8BE-cw-HxV"/>
                 <outlet property="LabelContent" destination="Qj7-yF-kOt" id="q1d-xd-PRY"/>
+                <outlet property="imageViewOne" destination="isJ-Bh-8e7" id="T1b-Gk-bdm"/>
+                <outlet property="imageViewThd" destination="DY0-TD-Ff5" id="JUA-Ws-ubr"/>
+                <outlet property="imageViewTwo" destination="ztz-DA-ABf" id="lgW-3f-oIM"/>
                 <outlet property="newContentView" destination="pIr-rJ-kQD" id="Ttg-cH-Q97"/>
             </connections>
             <point key="canvasLocation" x="373" y="357.5"/>
