--- a/智慧田园/智慧田园/Expert/AskExpertTableViewCell.xib
+++ b/智慧田园/智慧田园/Expert/AskExpertTableViewCell.xib
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2327e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11760" systemVersion="16F43c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11755"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,16 +21,20 @@
             <rect key="frame" x="0.0" y="0.0" width="388" height="556"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="248" verticalHuggingPriority="248" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="388" height="555"/>
+                <rect key="frame" x="0.0" y="0.0" width="388" height="555"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="4R4-fA-juV">
+                        <rect key="frame" x="10" y="0.0" width="368" height="217"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5i2-mO-VrB">
-                                <frame key="frameInset" minX="271" minY="205" width="88" height="22"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5i2-mO-VrB">
+                                <rect key="frame" x="275" y="195" width="88" height="22"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Expert_Replied" translatesAutoresizingMaskIntoConstraints="NO" id="Ty5-Je-hJW"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Expert_Replied" translatesAutoresizingMaskIntoConstraints="NO" id="Ty5-Je-hJW">
+                                        <rect key="frame" x="0.0" y="3.5" width="54" height="15"/>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dBB-XX-AY0">
+                                        <rect key="frame" x="54" y="0.0" width="34" height="22"/>
                                         <fontDescription key="fontDescription" name="FZLTHK--GBK1-0" family="FZLanTingHei-R-GBK" pointSize="8"/>
                                         <state key="normal" title="15分钟前">
                                             <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -36,11 +43,13 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="水稻专区" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSq-wA-0Cb">
+                                <rect key="frame" x="10" y="195.5" width="56" height="16.5"/>
                                 <fontDescription key="fontDescription" name="FZLTHK--GBK1-0" family="FZLanTingHei-R-GBK" pointSize="14"/>
                                 <color key="textColor" red="0.40000000000000002" green="0.80000000000000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="水稻专用叶面肥近年来用的比较多，能够全面补充水稻在营养期和孕穗期所需要的营养，提高对养分和水分的吸收能力，增强光合作用。而使用碧邦液肥水稻专用叶面肥会有哪些益处呢？" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BTR-WK-EkS">
+                                <rect key="frame" x="10" y="10" width="303" height="92"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Foz-pm-z3h"/>
                                 </constraints>
@@ -54,24 +63,29 @@
                                 </variation>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" image="Forum_Photo" translatesAutoresizingMaskIntoConstraints="NO" id="U91-yW-LhV">
+                                <rect key="frame" x="323" y="5" width="35" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="35" id="NOP-du-KhJ"/>
                                     <constraint firstAttribute="height" constant="36" id="hCx-1O-T3o"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="eey-fJ-dgm">
+                                <rect key="frame" x="10" y="110.5" width="244" height="80"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" tag="101" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kFx-wZ-Id5" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="kFx-wZ-Id5" secondAttribute="height" multiplier="1:1" id="ZGb-Bc-Rgi"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" tag="102" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NXr-dN-Ayq" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <rect key="frame" x="82" y="0.0" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="NXr-dN-Ayq" secondAttribute="height" multiplier="1:1" id="zFM-mv-90O"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" tag="103" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I7g-Uc-O5c" customClass="MessagePhotoView" customModule="智慧田园" customModuleProvider="target">
+                                        <rect key="frame" x="164" y="0.0" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="I7g-Uc-O5c" secondAttribute="height" multiplier="1:1" id="kgH-XM-9Un"/>
                                         </constraints>
@@ -93,14 +107,14 @@
                             <constraint firstAttribute="trailing" secondItem="5i2-mO-VrB" secondAttribute="trailing" constant="5" id="7r0-Er-FXN"/>
                             <constraint firstItem="BTR-WK-EkS" firstAttribute="leading" secondItem="4R4-fA-juV" secondAttribute="leading" constant="10" id="8B9-Da-Pxg"/>
                             <constraint firstItem="U91-yW-LhV" firstAttribute="leading" secondItem="BTR-WK-EkS" secondAttribute="trailing" constant="10" id="D15-yH-Til"/>
-                            <constraint firstAttribute="bottom" secondItem="BTR-WK-EkS" secondAttribute="bottom" constant="124" id="EDg-eY-PkH"/>
+                            <constraint firstAttribute="bottom" secondItem="BTR-WK-EkS" secondAttribute="bottom" constant="115" id="EDg-eY-PkH"/>
                             <constraint firstAttribute="bottom" secondItem="5i2-mO-VrB" secondAttribute="bottom" constant="5" id="UEo-je-qSv"/>
-                            <constraint firstItem="5i2-mO-VrB" firstAttribute="centerY" secondItem="QSq-wA-0Cb" secondAttribute="centerY" constant="3" id="Xh4-LJ-OC5"/>
                             <constraint firstItem="QSq-wA-0Cb" firstAttribute="leading" secondItem="4R4-fA-juV" secondAttribute="leading" constant="10" id="YhK-9b-0aI"/>
                             <constraint firstItem="eey-fJ-dgm" firstAttribute="leading" secondItem="BTR-WK-EkS" secondAttribute="leading" id="lAV-vb-gs6"/>
                             <constraint firstItem="QSq-wA-0Cb" firstAttribute="top" secondItem="eey-fJ-dgm" secondAttribute="bottom" constant="5" id="rEm-s3-48t"/>
                             <constraint firstAttribute="bottom" secondItem="QSq-wA-0Cb" secondAttribute="bottom" constant="5" id="sxI-sf-SOd"/>
                             <constraint firstAttribute="trailing" secondItem="U91-yW-LhV" secondAttribute="trailing" constant="10" id="tgF-um-pl8"/>
+                            <constraint firstAttribute="bottom" secondItem="5i2-mO-VrB" secondAttribute="bottom" id="ulD-Hc-4e4"/>
                             <constraint firstItem="BTR-WK-EkS" firstAttribute="top" secondItem="4R4-fA-juV" secondAttribute="top" constant="10" id="uun-Dz-zxg"/>
                             <constraint firstItem="U91-yW-LhV" firstAttribute="top" secondItem="4R4-fA-juV" secondAttribute="top" constant="5" id="wGh-f5-BUF"/>
                             <constraint firstItem="5i2-mO-VrB" firstAttribute="centerY" secondItem="QSq-wA-0Cb" secondAttribute="centerY" constant="5" id="xIM-Up-Bn4"/>
